# controlled_timeseries_intervention

./: .gitignore  README.md  examples.ipynb  pyproject.toml
src/: series.py
tests/: test_means.py  test_series.py
work_in_progress/: pymc3.ipynb  pyproject.toml
