[tool.poetry]
name = "controlled_timeseries_intervention"
version = "0.1.0"
description = ""
authors = ["Wolfgang <wolfgang.spindeler@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
plotly = "^5.6.0"
scipy = "^1.8.0"
pytest = "^7.0.1"
pandas = "^1.4.1"
jupyterlab = "^3.3.0"
pingouin = "^0.5.1"
kaleido = "0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
