[tool.poetry]
name = "work_in_progress"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "<1.22"
pymc3 = "^3.11.4"
jupyterlab = "^3.3.1"
scipy = "^1.8.0"
plotly = "^5.6.0"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
